# ATME-Sovereign-Protocol

./: .gitignore  LICENSE  README.md  config.go  docker-compose.yml  entropy.go  logger.go  main.go  pulse_engine.go  pyproject.toml  stats.go  stratum_client.go
backend/ethics/: safeguards.py
backend/gateway/: app.py  auth.py  billing.py
backend/learning/: curiosity.py  ppo.py
backend/memory/: episodic.py
backend/multilingual/: translator.py
backend/perception/: encoder.py
backend/retention/: user_memory.py
backend/simulation/: config.py  ecology.py  event_injector.py  orchestrator.py  physics_env.py  procedural.py
backend/streaming/: ws_manager.py
docker/: Dockerfile.backend  Dockerfile.frontend  nginx.conf
frontend/: index.html  package.json
frontend/src/: App.tsx
frontend/src/components/: AuthPanel.tsx  BillingPanel.tsx  ControlPanel.tsx  DecisionPanel.tsx  EcologyPanel.tsx  MemoryTimeline.tsx  PerceptionPanel.tsx  RetentionPanel.tsx  Scene3D.tsx
frontend/src/hooks/: useAuth.ts  useWebSocket.ts
frontend/src/utils/: api.ts
tests/: test_curiosity.py  test_ecology.py  test_ethics.py  test_event_injector.py  test_gateway.py  test_memory.py  test_multilingual.py  test_perception.py  test_physics_env.py  test_ppo.py  test_procedural.py  test_retention.py
